Fixed overflow:hidden jplayer bug

--- a/public/less/main.less
+++ b/public/less/main.less
@@ -363,7 +363,7 @@ body.about {
 
 #players {
   width: 100%;
-  overflow: hidden;
+  /*overflow: hidden;*/
   position: fixed;
   top: 15%;
   text-align: center;
